[Bug] Fix body overflow and React key error

--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -4,6 +4,7 @@
     gap: 2rem;
     place-items: start;
     place-content: start;
+    width: 100%;
     height: inherit;
 }
 
