--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@
 
 html {
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
